# MagneticBall3D

./: .gitignore  build.gradle
app/: build.gradle  google-services.json
app/jni/: CMakeLists.txt
app/jni/src/: CMakeLists.txt  DataBaseHelper.cpp  DataBaseHelper.h  EnumsAndVariables.h  GameStateHelper.cpp  GameStateHelper.h  SendStatisticsHelper.cpp  SendStatisticsHelper.h  Sounds.cpp  Sounds.h  main.cpp
app/jni/src/bosses/: BaseBoss.cpp  BaseBoss.h  TankWithCommander.cpp  TankWithCommander.h
app/jni/src/enemies/: AnimatedCollidingEnemy.cpp  AnimatedCollidingEnemy.h  BaseEnemy.cpp  BaseEnemy.h  CopWithGrenadeLauncher.cpp  CopWithGrenadeLauncher.h  CopWithPistol.cpp  CopWithPistol.h  CopWithPistolShield.cpp  CopWithPistolShield.h  MovableEnemy.cpp  MovableEnemy.h  Sniper.cpp  Sniper.h  StaticEnemy.cpp  StaticEnemy.h  Tank.cpp  Tank.h
app/jni/src/energySystem/: EnergySystem.cpp  EnergySystem.h
app/jni/src/garbage/: Garbage.cpp  Garbage.h
app/jni/src/improvements/: Improvements.cpp  Improvements.h
app/jni/src/maps/: BaseMap.cpp  BaseMap.h  Map0Tutorial.cpp  Map0Tutorial.h  Map1.cpp  Map1.h  Map2.cpp  Map2.h  Map3.cpp  Map3.h  Map4.cpp  Map4.h  Map5.cpp  Map5.h
app/jni/src/menus/playerTalents/: PlayerTalentsGUILayer.cpp  PlayerTalentsGUILayer.h
app/jni/src/menus/settings/: SettingsMenuGUILayer.cpp  SettingsMenuGUILayer.h
app/jni/src/menus/shop/: ShopGUILayer.cpp  ShopGUILayer.h
app/jni/src/menus/start/: StartMenuGUILayer.cpp  StartMenuGUILayer.h
app/jni/src/pathfinding/: AStar.cpp  AStar.h
app/jni/src/playState/: PlayStateGUILayer.cpp  PlayStateGUILayer.h  PlayStateSceneLayer.cpp  PlayStateSceneLayer.h
app/jni/src/player/: Player.cpp  Player.h  PlayerAirTrajectory.cpp  PlayerAirTrajectory.h
app/src/main/: AndroidManifest.xml
app/src/main/assets/models3D/: Buildings.fbx  Garbage1.fbx  Garbage2.fbx  Garbage3.fbx  Ground.fbx  StoneThrower.fbx  Walls.fbx
app/src/main/assets/models3D/bosses/: BossTankWithCommander.fbx
app/src/main/assets/models3D/enemies/: Camel.fbx  ChariotJavelin.fbx  CopWithGrenadeLauncher.fbx  CopWithPistol.fbx  CopWithPistolShield.fbx  Ghoul.fbx  JanitorBroom.fbx  JanitorRake.fbx  JunkyardBus.fbx  JunkyardGuard.fbx  Mummy.fbx  RatWithMagnet.fbx  Skeleton.fbx  Sniper.fbx  Tank.fbx
app/src/main/assets/models3D/map0Tutorial/: Buildings.fbx  EnvNoColliders.fbx  GarbageCommon.fbx  GarbageCommon_32items.fbx  GarbageCopPistol_4items.fbx  GarbageEnemyGunShield_4items.fbx  GarbageEnemyJanitorRake_4items.fbx  Ground.fbx  PathEnemiesAllowedPositions.fbx  Walls.fbx
app/src/main/assets/models3D/map1/: Buildings.fbx  EnvColliders.fbx  EnvNoColliders.fbx  GarbageCommon.fbx  GarbageCopGrenade_3items.fbx  GarbageCopPistol_4items.fbx  GarbageCopShield_5items.fbx  GarbageCopSniper_2items.fbx  GarbageForMap0Tutorial.fbx  GarbageTank_3items.fbx  Ground.fbx  JumpPads.fbx  PathAllowedPositions.fbx  PathBossAllowedPositions.fbx  PathBossWalls.fbx  PathEnemiesAllowedPositions.fbx  PathEnemiesWalls.fbx  PathWalls.fbx
app/src/main/assets/models3D/map2/: EnvNoColliders.fbx  GarbageCommon.fbx  GarbageCommon_31items.fbx  GarbageCommon_32items.fbx  GarbageEnemyGunShield_4items.fbx  GarbageEnemyGun_4items.fbx  GarbageEnemyMagnet_3items.fbx  GarbageEnemyRocket_4items.fbx  GarbageEnemySniper_2items.fbx  JumpPads.fbx  MainGround.fbx  OtherGrounds.fbx  PathEnemiesAllowedPositions.fbx  PathEnemiesWalls.fbx
app/src/main/assets/models3D/map3/: Buildings.fbx  EnvNoColliders.fbx  EnvNoCollidersNormalMap.fbx  GarbageCommon_31items.fbx  GarbageEnemyGunShield_4items.fbx  GarbageEnemyJanitorBroom_4items.fbx  GarbageEnemyJanitorRake_4items.fbx  Ground.fbx  JumpPads.fbx  PathEnemiesAllowedPositions.fbx  PathEnemiesWalls.fbx
app/src/main/assets/models3D/map4/: Buildings.fbx  BuildingsNormalMap.fbx  EnvNoColliders.fbx  GarbageCommon_32items.fbx  GarbageEnemyCamel_2items.fbx  GarbageEnemyChariot_5items.fbx  GarbageEnemyMummy_3items.fbx  Ground.fbx  JumpPads.fbx  PathEnemiesAllowedPositions.fbx  PathEnemiesWalls.fbx
app/src/main/assets/models3D/map5/: Buildings.fbx  EnvNoColliders.fbx  GarbageCommon_31items.fbx  GarbageEnemyGhoul_3items.fbx  GarbageEnemyGunShield_4items.fbx  GarbageEnemySkeleton_3items.fbx  GroundHeapNormalMap.fbx  JumpPads.fbx  MainGround.fbx  OtherGrounds.fbx  (+2 more)
app/src/main/java/managers/: AdsManager.java  BillingManager.java  GoogleAnalyticsManager.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+46 files in other folders)
